7148126: ConstantPoolCacheEntry::print prints to wrong stream

Should print to passed in stream not tty

Reviewed-by: dholmes, never